--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,7 @@ dependencies {
     compile "junit:junit:4.12"
 
 }
+jacoco {
+    toolVersion = "0.8.1"
+    reportsDir = file("$buildDir/myHTMLreport")
+}
